--- a/package.json
+++ b/package.json
@@ -1,27 +1,35 @@
 {
   "name": "gym-management",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint",
+    "electron:dev": "concurrently \"npm run dev\" \"wait-on http://localhost:3000 && electron .\""
   },
   "dependencies": {
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.6"
+    "@prisma/client": "^6.0.0",
+    "next": "15.5.6",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-to-print": "2.15.1",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.6",
-    "@eslint/eslintrc": "^3"
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.3.0",
+    "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.17",
+    "concurrently": "^8.2.0",
+    "cross-env": "^7.0.3",
+    "electron": "^38.3.0",
+    "electron-builder": "^24.0.0",
+    "postcss": "^8.4.35",
+    "prisma": "^6.0.0",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.0.0",
+    "wait-on": "^7.2.0"
   }
 }
