--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "@prisma/client": "^6.0.0",
+    "jspdf": "^3.0.3",
     "next": "15.5.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-to-print": "^3.2.0",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
