--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-to-print": "^3.2.0",
+    "sharp": "^0.34.4",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
